--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMBzbzQv7Y6Vpxav32VeFHA",
+      "authorship_tag": "ABX9TyMHPczRtYUmXMtqIQUGPQT3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,7 @@
         "import numpy as np\n",
         "from google.colab.patches import cv2_imshow\n",
         "img = cv2.imread('road.jpg',0)\n",
+        "print(1)\n",
         "cv2_imshow(img) \n"
       ],
       "execution_count": null,
